<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".SettingsActivity">
<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <TableLayout
            android:id="@+id/bigButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paragraph_delay" />

            <EditText
                    android:id="@+id/paraPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true" >
            </EditText>

        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/snt_delay" />

            <EditText
                    android:id="@+id/sntPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true" >
            </EditText>

        </TableRow>
        <LinearLayout android:orientation="horizontal">
            <CheckBox
                    android:id="@+id/snt_concurrent"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickSntConcurrent"
                     />
            <LinearLayout android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:onClick="onClickSntInfo">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearance"
                        android:text="@string/snt_concurrent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="@string/snt_concurrent_info"/>
            </LinearLayout>
        </LinearLayout>
        <CheckBox
                android:id="@+id/highlight_sentences"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi_sentences" />

        <CheckBox
                android:id="@+id/plug_start"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headset_plug_start" />

        <CheckBox
                android:id="@+id/plug_stop"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headset_plug_stop" />

        <CheckBox
                android:id="@+id/fbr_headset_start"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headset_start_fbr" />

        <CheckBox
                android:id="@+id/lock_screen"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_lock_widget"
                android:onClick="onClickLockScreen"/>

        <CheckBox
                android:id="@+id/net_synth"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_synth" />

        <CheckBox
                android:id="@+id/net_synth_wifi"
                android:checked="true"
                android:layout_marginLeft="36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_synth_wifi" />

        <CheckBox
                android:id="@+id/word_opts"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_opts" />

        <CheckBox
                android:id="@+id/screen_on"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_on" />

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sleep_after" />

            <Spinner
                android:id="@+id/sleepSpinner"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="2"
                android:prompt="@string/sleep_after"
            />

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

            <Button android:id="@+id/edit_speech_btn"
                    android:text="@string/edit_speech"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    />
        </TableRow>


    </TableLayout>

</LinearLayout>
</ScrollView>