<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        >
        <TextView android:id="@+id/vtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/url"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:autoLink="web"
                android:gravity="center"
                />
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
        </TableRow>
</TableLayout>
