<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
    android:id="@+id/RootView"
>
    <TableLayout
            android:id="@+id/bigButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

        <Button android:id="@+id/button_lang"
                android:text="@string/set_language"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
            <Button android:id="@+id/button_more"
                    android:text="@string/more_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

            <Button android:id="@+id/button_reset"
                    android:text="@string/reset_tts"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    />
            <Button android:id="@+id/button_about"
                    android:text="@string/about"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    />
        </TableRow>

    </TableLayout>

    <TableLayout
            android:id="@+id/sliders"
            android:visibility="visible"
            android:paddingBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/speed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            <SeekBar
                    android:id="@+id/speed_control"
                    android:paddingRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/pitch"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            <SeekBar
                    android:id="@+id/pitch_control"
                    android:paddingRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/volume"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            <SeekBar
                    android:id="@+id/volume_control"
                    android:paddingRight="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
        </TableRow>

    </TableLayout>

    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="5"
        android:id="@+id/nav_buttons"
    >
		<ImageButton android:id="@+id/button_previous"
			android:layout_width="70dip"
			android:layout_height="40dip"
			android:layout_weight="1"
			android:src="@drawable/media_skip_backward"
		/> 
		<ImageButton android:id="@+id/button_play"
			android:layout_width="70dip"
			android:layout_height="40dip"
			android:layout_weight="1"
			android:src="@drawable/media_playback_start"
		/>
		<ImageButton android:id="@+id/button_pause"
			android:layout_width="70dip"
			android:layout_height="40dip"
			android:layout_weight="1"
			android:src="@drawable/media_playback_pause"
		/>
		<ImageButton android:id="@+id/button_next"
			android:layout_width="70dip"
			android:layout_height="40dip"
			android:layout_weight="1"
			android:src="@drawable/media_skip_forward"
		/>
		<ImageButton android:id="@+id/button_close"
			android:layout_width="70dip"
			android:layout_height="40dip"
			android:layout_weight="1"
			android:src="@drawable/media_playback_stop"
		/>
        <ImageButton android:id="@+id/button_setup"
                     android:layout_width="40dip"
                     android:layout_height="40dip"
                     android:layout_weight="1"
                     android:src="@drawable/setup_hide"
                />
    </LinearLayout>

</LinearLayout>
